--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/socialite": "^5.17",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
-        "league/flysystem-aws-s3-v3": "3.0"
+        "league/flysystem-aws-s3-v3": "3.0",
+        "quix-labs/laravel-supabase-flysystem": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
